--- a/miportfolio/src/app/header/header.component.html
+++ b/miportfolio/src/app/header/header.component.html
@@ -1,1 +1,28 @@
 <p class="display-3">header works!</p>
+
+<nav class="navbar bg-primary navbar-expand-lg " data-bs-theme="dark">
+    <div class="container-fluid">
+
+        <img src="assets/img/logoYP.png" alt="Logo" width="150" height="" class="d-inline-block align-text-top">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+      </button>
+      <a class="navbar-brand" href="#">Denise Bustos</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Acerca de</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled">Disabled</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
