commit andubo el logo

--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -14,6 +14,6 @@ $theme-colors: (
 );
 @import "../node_modules/bootstrap/scss/bootstrap";
 
-* {
-  cursor: url(assets/cursor_gral2.png), auto;
-}
+// * {
+//   cursor: url(assets/cursor_gral2.png), auto;
+// }
