--- a/portfolio/src/app/header/header.component.html
+++ b/portfolio/src/app/header/header.component.html
@@ -4,44 +4,46 @@
   <div class="container-fluid">
 
     <a class="navbar-brand" href="#">
-      <img src="assets/logoYP.png" alt="logo" width="150" height="">Denise Lucía Bustos
-
+      <img src="assets/logoYP.png" alt="logo" width="130" height="">Denise Lucía Bustos
     </a>
-
-
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 mx-2">
+        <li class="nav-item mx-2">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mx-2">
           <a class="nav-link" href="#">Acerca de mi</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mx-2">
           <a class="nav-link" href="#">Experiencia</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mx-2">
           <a class="nav-link" href="#">Educación</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">H&S</a>
+        <li class="nav-item mx-2">
+          <a class="nav-link" href="#">Hard&Soft Skills</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mx-2">
           <a class="nav-link" href="#">Proyectos</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mx-2">
           <a class="nav-link">Redes</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
 
-        <button type="submit" class="btn btn-light" >Login</button>
+      <form class="d-flex" role="search">
+        <button type="submit" class="btn btn-outline-light btn-lg mx-3" >Login</button>
       </form>
+
     </div>
   </div>
 </nav>
+
+
+
+
