--- a/portfolio/src/app/acercade/acercade.component.html
+++ b/portfolio/src/app/acercade/acercade.component.html
@@ -1,1 +1,16 @@
 <p>acercade works!</p>
+
+<div class="container-fluid ">
+  <div class="row g-0">
+    <div class="col text-center">
+      <img class="m-3 border border-primary rounded-circle w-25" src="assets/acercade/chibiGrande3.png" alt="imgperfil">
+
+    </div>
+    <div class="col">
+      <h2 class="display-5">Acerca de mi</h2>
+      <p></p>
+    </div>
+  </div>
+
+
+</div>
