--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -1,7 +1,8 @@
 
 <!-- <router-outlet></router-outlet> -->
 <app-header></app-header>
-
+<app-banner></app-banner>
+<app-acercade></app-acercade>
 
 
 
