--- a/portfolio/src/app/header/header.component.html
+++ b/portfolio/src/app/header/header.component.html
@@ -31,21 +31,22 @@
         <li class="nav-item mx-2">
           <a class="nav-link" href="#">Proyectos</a>
         </li>
-        <li class="nav-item mx-2">
-          <a class="nav-link">Redes</a>
-        </li>
+
       </ul>
+       <a class="mx-3" href="https://www.linkedin.com/in/denise-bustos-664840200/">
+        <img src="assets/iconoLinked2.png" alt="" height="32">
+       </a>
 
       <!-- -------LOGIN-------- -->
 
-      <div class="d-flex" data-bs-theme="light">
+      <div class="d-flex mx-4" data-bs-theme="light">
         <app-login></app-login>
       </div>
 
 
-      <form class="d-flex" role="search">
+      <!-- <form class="d-flex" role="search">
         <button type="submit" class="btn btn-outline-light btn-lg mx-3" >Login</button>
-      </form>
+      </form> -->
 
     </div>
   </div>
