commit hasta educacion

--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -3,6 +3,8 @@
 <app-header></app-header>
 <app-banner></app-banner>
 <app-acercade></app-acercade>
+<app-experiencia></app-experiencia>
+<app-educacion></app-educacion>
 
 
 
