--- a/portfolio/src/app/componentes/header/header.component.html
+++ b/portfolio/src/app/componentes/header/header.component.html
@@ -1,7 +1,7 @@
 
 
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-  <div class="container-fluid">
+  <div class="container-fluid g-0">
 
     <a class="navbar-brand" href="#">
       <img src="assets/logoYP.png" alt="logo" width="130" height="">Denise Lucía Bustos
@@ -31,17 +31,27 @@
         <li class="nav-item mx-2">
           <a class="nav-link" href="#">Proyectos</a>
         </li>
+        <li class="nav-item mx-2">
+          <a class="" target="_blank" href="https://www.linkedin.com/in/denise-bustos-664840200/">
+            <img class="d-inline-block align-text-top m-2" src="assets/iconoLinked2.png" alt="linkedicono" height="32">
+           </a>
+        </li>
+        <li class="nav-item mx-2">
+          <div class="" data-bs-theme="light">
+            <app-login></app-login>
+          </div>
+        </li>
 
       </ul>
-       <a class="mx-3" href="https://www.linkedin.com/in/denise-bustos-664840200/">
+       <!-- <a class="mx-3 mb-3" href="https://www.linkedin.com/in/denise-bustos-664840200/">
         <img src="assets/iconoLinked2.png" alt="" height="32">
-       </a>
+       </a> -->
 
       <!-- -------LOGIN-------- -->
 
-      <div class="d-flex mx-4" data-bs-theme="light">
+      <!-- <div class="d-flex mx-4" data-bs-theme="light">
         <app-login></app-login>
-      </div>
+      </div> -->
 
 
       <!-- <form class="d-flex" role="search">
