commit cmg router

--- a/portfolio/src/app/componentes/experiencia/experiencia.component.html
+++ b/portfolio/src/app/componentes/experiencia/experiencia.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="col-8 col-md-6">
       <h2 class="display-5 mb-4">Diseño y Desarrollo Web</h2>
-      <p class="h4 fw-light">Periodo Sep17-Dic17 2018</p>
+      <p class="h4 fw-light">Periodo Sep.17-Dic.17 2018</p>
       <p class="h4 fw-normal">Creación de sitio web en WordPress para el colegio Escuela
         Ernesto Perez Cuesta 4-155. Prácticas Profesionales</p>
     </div>
