--- a/portfolio/src/app/componentes/header/header.component.html
+++ b/portfolio/src/app/componentes/header/header.component.html
@@ -41,6 +41,12 @@
             <app-login></app-login>
           </div>
         </li>
+        <li class="nav-item mx-2">
+          <button type="button" class="btn btn-outline-light btn-lg" (click)="login2()" id="dropdownForm1" ngbDropdownToggle>
+            Login2
+          </button>
+
+        </li>
 
       </ul>
        <!-- <a class="mx-3 mb-3" href="https://www.linkedin.com/in/denise-bustos-664840200/">
