--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -1,10 +1,12 @@
 
-<!-- <router-outlet></router-outlet> -->
-<app-header></app-header>
+<router-outlet></router-outlet>
+
+
+<!-- <app-header></app-header>
 <app-banner></app-banner>
 <app-acercade></app-acercade>
 <app-experiencia></app-experiencia>
-<app-educacion></app-educacion>
+<app-educacion></app-educacion> -->
 
 
 
