--- a/portfolio/src/app/componentes/acercade/acercade.component.html
+++ b/portfolio/src/app/componentes/acercade/acercade.component.html
@@ -5,13 +5,15 @@
 
     <div class="col-12 col-md-4 text-center my-5">
       <img class="m-3 border border-primary rounded-circle w-25" src="assets/acercade/chibiGrande3.png" alt="imgperfil">
-      <h1 class="display-6 m-3">Denise Lucía Bustos</h1>
+      <h1 id="nombre" class="display-6 m-3">{{persona.nombre}} {{persona.apellido}}</h1>
+
     </div>
 
     <div class="col-12 col-md-6 m-3">
       <h2 class="display-5 mb-4">Arte y Diseño Multimedial - Full Stack jr</h2>
-      <p class="h4 fw-normal mt-4 mx-2">Me recibí de diseñadora multimedial, una carrera con orientación
-        en diseño y desarrollo web, y para ampliar y actualizar mis conocimientos realizo cursos de Front End,
+      <p class="h4 fw-normal mt-4 mx-2">Me recibí de diseñadora multimedial, una
+        carrera con orientación en diseño y desarrollo web, y para crecer
+        profesionalmente y actualizar mis conocimientos realizo cursos de Front End,
          Back End y Diseño UX/UI.</p>
       <p></p>
     </div>
