--- a/portfolio/src/app/componentes/login/login.component.html
+++ b/portfolio/src/app/componentes/login/login.component.html
@@ -3,7 +3,7 @@
   <div class="container-fluid g-0">
 
     <a class="navbar-brand" href="#">
-      <img src="assets/logoYP.png" alt="logo" width="130" height="">Ingresar
+      <img src="assets/logoYP.png" alt="logo" width="130" height="">
     </a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
