commit educación y footer

--- a/portfolio/src/app/componentes/acercade/acercade.component.html
+++ b/portfolio/src/app/componentes/acercade/acercade.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid g-0">
+<div id="ami" class="container-fluid g-0">
   <h2 class="text-center m-5 p-3 text-bg-primary">Acerca de</h2>
 
   <div class="row g-0 align-items-center">
