--- a/portfolio/src/app/componentes/header/header.component.html
+++ b/portfolio/src/app/componentes/header/header.component.html
@@ -17,19 +17,19 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item mx-2">
-          <a class="nav-link" href="#">Acerca de mi</a>
+          <a class="nav-link" href="#ami">Acerca de mi</a>
         </li>
         <li class="nav-item mx-2">
-          <a class="nav-link" href="#">Experiencia</a>
+          <a class="nav-link" href="#expe">Experiencia</a>
         </li>
         <li class="nav-item mx-2">
-          <a class="nav-link" href="#">Educación</a>
+          <a class="nav-link" href="#educ">Educación</a>
         </li>
         <li class="nav-item mx-2">
-          <a class="nav-link" href="#">Hard&Soft Skills</a>
+          <a class="nav-link" href="#hs">Hard&Soft Skills</a>
         </li>
         <li class="nav-item mx-2">
-          <a class="nav-link" href="#">Proyectos</a>
+          <a class="nav-link" href="#proy">Proyectos</a>
         </li>
         <li class="nav-item mx-2">
           <a class="" target="_blank" href="https://www.linkedin.com/in/denise-bustos-664840200/">
