--- a/portfolio/src/app/home/home.component.html
+++ b/portfolio/src/app/home/home.component.html
@@ -3,3 +3,24 @@
 <app-acercade></app-acercade>
 <app-experiencia></app-experiencia>
 <app-educacion></app-educacion>
+
+
+<div class="container-fluid">
+  <div class="row position-absolute bottom-0 end-0 position-fixed g-0">
+    <a href="#" >
+      <i class="bi bi-arrow-up-circle-fill" style="font-size: 4rem;"></i>
+    </a>
+  </div>
+</div>
+
+<app-footer></app-footer>
+
+
+
+<!-- <div class="position-relative gotopcontainer btn-flecha">
+  <button type="button" id="cursorlogo" class="btn btn-primary position-absolute bottom-0 end-0 py-3 px-3 m-4 rounded-circle">
+      <a href="#" >
+          <img src="assets/img/botones/flechasvg.svg"  alt="">
+      </a>
+  </button>
+</div> -->
