--- a/portfolio/src/app/componentes/educacion/educacion.component.html
+++ b/portfolio/src/app/componentes/educacion/educacion.component.html
@@ -1,4 +1,94 @@
+<div id="educ" class="container-fluid g-0">
+  <h2 class="text-center m-5 p-3 text-bg-primary"> Educación</h2>
 
-<div class="container-fluid g-0">
-  <h2 class="text-center m-5 p-3 text-bg-primary">Educación</h2>
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-6 col-lg-4 text-center">
+      <button type="button" class="btn btn-outline-primary btn-lg mx-2 p-3"
+      routerLink="/nuevaedu" *ngIf="isLogged">
+      <i class="bi bi-file-earmark-plus-fill"></i> Nuevo</button>
+    </div>
+  </div>
+
+  <div class="row justify-content-center my-4">
+    <div class="col-12 col-md-6 col-lg-4 text-center">
+      <button type="button" class="btn btn-primary btn-lg m-2 p-3"
+      routerLink="/nuevaedu" *ngIf="isLogged">
+      <i class="bi bi-file-earmark-plus-fill mx-2"></i>Agregar Educación
+    </button>
+    </div>
+  </div>
+
+
+  <div class="col lg 1"></div>
+  <div class="col-lg-11 my-3 w-75 mx-auto">
+    <table class="table table-hover">
+      <tbody>
+        <tr *ngFor="let Educacion of educacion" class="w-75">
+          <td class="h3 fw-normal">{{Educacion.nombreE}}</td>
+          <td>{{Educacion.descripcionE}}</td>
+
+          <td *ngIf="isLogged">
+            <button class="btn btn-outline-primary" routerLink="/editedu/{{Educacion.id}}">
+              <i class="bi bi-pencil-fill" ></i> Editar
+            </button>
+          </td>
+          <td *ngIf="isLogged">
+            <button class="btn btn-outline-primary" (click)="delete(Educacion.id)">
+              <i class="bi bi-trash3" ></i> Borrar
+            </button>
+          </td>
+
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+
+  <div *ngFor="let Educacion of educacion" class="row g-0 my-5 ">
+    <div class="col-10 col-sm-8 col-md-4 text-center my-5">
+      <img class="w-25" src="assets/experiencia/logoempresa.jpg" alt="">
+    </div>
+    <div  class="col-6 col-md-5 mx-4">
+      <h2 class="display-5 mb-4">{{Educacion.nombreE}}</h2>
+      <p class="h4 fw-light">(years)</p>
+      <p class="h4 fw-normal">{{Educacion.descripcionE}}</p>
+    </div>
+    <div *ngIf="isLogged" class="col-3 col-md-2 ">
+      <button type="button" class="btn btn-outline-primary mx-2"
+        routerLink="/editexp/{{Educacion.id}}">
+        <i class="bi bi-pencil-fill"></i> Editar
+      </button>
+      <button type="button" class="btn btn-outline-primary mx-2"
+        (click)="delete(Educacion.id)">
+        <i class="bi bi-trash3"></i>Borrar
+      </button>
+    </div>
+  </div>
+
+  <div class="row g-0 my-4 align-items-center">
+    <div class="col-2 col-md-4 text-center my-5">
+      <img class="w-25" src="assets/experiencia/logoempresa.jpg" alt="">
+    </div>
+    <div class="col-8 col-md-6">
+      <h2 class="display-5 mb-4">Diseño y Desarrollo Web</h2>
+      <p class="h4 fw-light">Periodo Sep.17-Dic.17 2018</p>
+      <p class="h4 fw-normal">Creación de sitio web en WordPress para el colegio Escuela
+        Ernesto Perez Cuesta 4-155. Prácticas Profesionales</p>
+    </div>
+  </div>
+
+  <div class="row g-0 my-4 align-items-center">
+    <div class="col-2 col-md-4 text-center my-5">
+      <img class="w-25" src="assets/experiencia/logoempresa.jpg" alt="">
+    </div>
+    <div class="col-8 col-md-6">
+      <h2 class="display-5 mb-4">Desarrollo de Portfolio</h2>
+      <p class="h4 fw-light">Periodo Sep17-Dic17 2018</p>
+      <p class="h4 fw-normal">Creación de sitio web en WordPress para el colegio Escuela
+        Ernesto Perez Cuesta 4-155. Prácticas Profesionales</p>
+    </div>
+  </div>
+
+
+
 </div>
