--- a/portfolio/src/app/componentes/experiencia/experiencia.component.html
+++ b/portfolio/src/app/componentes/experiencia/experiencia.component.html
@@ -1,5 +1,5 @@
 
-<div class="container-fluid g-0">
+<div id="expe" class="container-fluid g-0">
   <h2 class="text-center m-5 p-3 text-bg-primary"> Experiencia</h2>
 
   <div class="row justify-content-center">
