--- a/portfolio/src/app/componentes/educacion/educacion.component.html
+++ b/portfolio/src/app/componentes/educacion/educacion.component.html
@@ -55,7 +55,7 @@
     </div>
     <div *ngIf="isLogged" class="col-3 col-md-2 ">
       <button type="button" class="btn btn-outline-primary mx-2"
-        routerLink="/editexp/{{Educacion.id}}">
+        routerLink="/editedu/{{Educacion.id}}">
         <i class="bi bi-pencil-fill"></i> Editar
       </button>
       <button type="button" class="btn btn-outline-primary mx-2"
