commit hys sikill configuradas

--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -1,10 +1,12 @@
+
+
 // $primary:#b83390;
 $danger: #dc3545;
 $primary: #b6296f;
 // $light: #f3f3f3;
 
 
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 // @import "../node_modules/bootstrap/scss/functions";
 
 
