--- a/portfolio/src/app/componentes/experiencia/experiencia.component.html
+++ b/portfolio/src/app/componentes/experiencia/experiencia.component.html
@@ -4,7 +4,8 @@
 
   <div class="row justify-content-center">
     <div class="col-12 col-md-6 col-lg-4 text-center">
-      <button type="button" class="btn btn-outline-primary btn-lg mx-2 p-3" routerLink="/nuevaexp" *ngIf="isLogged"><i class="bi bi-file-earmark-plus-fill"></i> Nuevo</button>
+      <button type="button" class="btn btn-outline-primary btn-lg mx-2 p-3" routerLink="/nuevaexp" *ngIf="isLogged">
+        <i class="bi bi-file-earmark-plus-fill"></i> Nuevo</button>
       <!-- <button type="button" class="btn btn-outline-primary mx-2 "><i class="bi bi-pencil-fill"></i> Editar</button>
       <button type="button" class="btn btn-outline-primary mx-2 "><i class="bi bi-trash3"></i>Borrar</button> -->
     </div>
