--- a/portfolio/src/app/home/home.component.html
+++ b/portfolio/src/app/home/home.component.html
@@ -3,6 +3,7 @@
 <app-acercade></app-acercade>
 <app-experiencia></app-experiencia>
 <app-educacion></app-educacion>
+<app-hys></app-hys>
 
 
 <div class="container-fluid">
