commit acercade con img en firebase

--- a/portfolio/src/app/componentes/hys/hys.component.html
+++ b/portfolio/src/app/componentes/hys/hys.component.html
@@ -3,7 +3,8 @@
 
   <div class="text-center">
     <button type="button" routerLink="/newskill" class="btn btn-outline-primary btn-lg mx-2 p-3" *ngIf="isLogged">
-      Nueva Skill
+      <i class="bi bi-file-earmark-plus-fill"></i>
+      Agregar Skill
     </button>
   </div>
 
