--- a/portfolio/src/app/componentes/acercade/acercade.component.html
+++ b/portfolio/src/app/componentes/acercade/acercade.component.html
@@ -1,20 +1,25 @@
 <div id="ami" class="container-fluid g-0">
   <h2 class="text-center m-5 p-3 text-bg-primary">Acerca de</h2>
 
-  <div class="row g-0 align-items-center">
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-6 col-lg-4 text-center">
+      <button type="button" class="btn btn-outline-primary btn-lg mx-2 p-3"
+      routerLink="/editacercade/1" *ngIf="isLogged">
+      <i class="bi bi-pencil-fill"></i> Editar persona</button>
+    </div>
+  </div>
 
-    <div class="col-12 col-md-4 text-center my-5">
-      <img class="m-3 border border-primary rounded-circle w-25" src="assets/acercade/chibiGrande3.png" alt="imgperfil">
+  <div class="row g-0 ">
+
+    <div class="col-12 col-md-4 text-center my-2">
+      <img src={{persona.img}} class="m-3 border border-primary rounded-circle w-50" alt="imgperfil">
       <h1 id="nombre" class="display-6 m-3">{{persona.nombre}} {{persona.apellido}}</h1>
 
     </div>
 
-    <div class="col-12 col-md-6 m-3">
-      <h2 class="display-5 mb-4">Arte y Diseño Multimedial - Full Stack jr</h2>
-      <p class="h4 fw-normal mt-4 mx-2">Me recibí de diseñadora multimedial, una
-        carrera con orientación en diseño y desarrollo web, y para crecer
-        profesionalmente y actualizar mis conocimientos realizo cursos de Front End,
-         Back End y Diseño UX/UI.</p>
+    <div class="col-12 col-md-6 m-3 align-self-center">
+      <h2 class="display-5 mb-4">Arte y Diseño Multimedial - Desarrollo Full Stack jr</h2>
+      <p class="h4 fw-normal mt-4 mx-2">{{persona.descripcion}}</p>
       <p></p>
     </div>
 
