--- a/portfolio/src/app/componentes/educacion/educacion.component.html
+++ b/portfolio/src/app/componentes/educacion/educacion.component.html
@@ -5,18 +5,18 @@
     <div class="col-12 col-md-6 col-lg-4 text-center">
       <button type="button" class="btn btn-outline-primary btn-lg mx-2 p-3"
       routerLink="/nuevaedu" *ngIf="isLogged">
-      <i class="bi bi-file-earmark-plus-fill"></i> Nuevo</button>
+      <i class="bi bi-file-earmark-plus-fill"></i> Agregar Educación</button>
     </div>
   </div>
 
-  <div class="row justify-content-center my-4">
+  <!-- <div class="row justify-content-center my-4">
     <div class="col-12 col-md-6 col-lg-4 text-center">
       <button type="button" class="btn btn-primary btn-lg m-2 p-3"
       routerLink="/nuevaedu" *ngIf="isLogged">
       <i class="bi bi-file-earmark-plus-fill mx-2"></i>Agregar Educación
     </button>
     </div>
-  </div>
+  </div> -->
 
 
   <div class="col lg 1"></div>
