--- a/portfolio/src/app/componentes/acercade/acercade.component.html
+++ b/portfolio/src/app/componentes/acercade/acercade.component.html
@@ -1,20 +1,36 @@
 <div id="ami" class="container-fluid g-0">
   <h2 class="text-center m-5 p-3 text-bg-primary">Acerca de</h2>
 
-  <div class="row justify-content-center">
+  <div class="row justify-content-center mb-4">
     <div class="col-12 col-md-6 col-lg-4 text-center">
       <button type="button" class="btn btn-outline-primary btn-lg mx-2 p-3"
-      routerLink="/editacercade/1" *ngIf="isLogged">
-      <i class="bi bi-pencil-fill"></i> Editar persona</button>
+      routerLink="/nuevaper" *ngIf="isLogged">
+      <i class="bi bi-file-earmark-plus-fill"></i> Agregar Persona</button>
     </div>
   </div>
 
-  <div class="row g-0 ">
+  <!-- editar -->
+
+  <div *ngFor="let persona of persona" class="row g-0 ">
+
+    <div *ngIf="isLogged" class="row justify-content-center my-3 g-0">
+      <div class="col-6 col-md-4 col-lg-2 text-center">
+        <button type="button" class="btn btn-outline-primary btn-lg  p-3"
+        routerLink="/editacercade/1">
+        <i class="bi bi-pencil-fill"></i> Editar persona</button>
+      </div>
+      <div class="col-6 col-md-4 col-lg-2 text-center">
+        <button type="button" class="btn btn-outline-primary btn-lg p-3"
+        (click)="delete(persona.id)" >
+        <i class="bi bi-trash3"></i>Borrar
+      </button>
+      </div>
+
+    </div>
 
     <div class="col-12 col-md-4 text-center my-2">
       <img src={{persona.img}} class="m-3 border border-primary rounded-circle w-50" alt="imgperfil">
       <h1 id="nombre" class="display-6 m-3">{{persona.nombre}} {{persona.apellido}}</h1>
-
     </div>
 
     <div class="col-12 col-md-6 m-3 align-self-center">
@@ -22,6 +38,8 @@
       <p class="h4 fw-normal mt-4 mx-2">{{persona.descripcion}}</p>
       <p></p>
     </div>
+
+
 
   </div>
 
