commit dejar como estaba acerca de

--- a/portfolio/src/app/componentes/acercade/edit-acercade.component.html
+++ b/portfolio/src/app/componentes/acercade/edit-acercade.component.html
@@ -14,7 +14,7 @@
 
 <div class="container-fluid" *ngIf="persona">
   <div class="row my-5">
-    <h2 class="display-5 my-4 text-center">Editar Educación</h2>
+    <h2 class="display-5 my-4 text-center">Editar Persona</h2>
 
     <div class="col-10 col-md-8 mx-auto">
 
