--- a/portfolio/src/app/componentes/acercade/acercade.component.html
+++ b/portfolio/src/app/componentes/acercade/acercade.component.html
@@ -1,13 +1,13 @@
 <div id="ami" class="container-fluid g-0">
   <h2 class="text-center m-5 p-3 text-bg-primary">Acerca de</h2>
 
-  <div class="row justify-content-center mb-4">
+  <!-- <div class="row justify-content-center mb-4">
     <div class="col-12 col-md-6 col-lg-4 text-center">
       <button type="button" class="btn btn-outline-primary btn-lg mx-2 p-3"
       routerLink="/nuevaper" *ngIf="isLogged">
       <i class="bi bi-file-earmark-plus-fill"></i> Agregar Persona</button>
     </div>
-  </div>
+  </div> -->
 
   <!-- editar -->
 
@@ -29,7 +29,7 @@
     </div>
 
     <div class="col-12 col-md-4 text-center my-2">
-      <img src={{persona.img}} class="m-3 border border-primary rounded-circle w-50" alt="imgperfil">
+      <img src={{persona.img}} class="m-3 border border-primary rounded-circle w-50" >
       <h1 id="nombre" class="display-6 m-3">{{persona.nombre}} {{persona.apellido}}</h1>
     </div>
 
