--- a/portfolio/src/app/componentes/acercade/newacercade.component.html
+++ b/portfolio/src/app/componentes/acercade/newacercade.component.html
@@ -31,11 +31,13 @@
           <label for="descripcion" class="h4 fw-normal">Descripcion</label>
           <input type="text" class="form-control" id="descripcion" name="descripcion" [(ngModel)]="persona.descripcion" required>
         </div>
+
         <div class="form-group my-4">
           <label for="img" class="h4 fw-normal">Imágen</label>
           <input type="file" class="form-control" id="img" name="img" [(ngModel)]="persona.img" (change)="uploadImage($event)"
           accept=".jpg, .jpeg, .png">
         </div>
+
         <div class="imagen my-4">
           <img [src]="imageService.url" width="200px" alt="">
         </div>
@@ -46,3 +48,32 @@
     </div>
   </div>
 </div>
+
+
+
+
+
+
+
+<!-- <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
+  <div class="form-group my-4">
+    <label for="nombre" class="h4 fw-normal">Nombre</label>
+    <input type="text" class="form-control" id="nombre" name="nombre" [(ngModel)]="persona.nombre" required>
+  </div>
+  <div class="form-group my-4">
+    <label for="apellido" class="h4 fw-normal">Apellido</label>
+    <input type="text" class="form-control" id="apellido" name="apellido" [(ngModel)]="persona.apellido" required>
+  </div>
+  <div class="form-group my-4">
+    <label for="descripcion" class="h4 fw-normal">Descripción</label>
+    <input type="text" class="form-control" id="descripcion" name="descripcion" [(ngModel)]="persona.descripcion" required>
+  </div>
+  <div class="form-group my-4">
+    <label for="img" class="h4 fw-normal">Imagen</label>
+    <input type="file" class="form-control" id="img" name="img" (change)="uploadImage($event)" accept=".jpg, .jpeg, .png">
+  </div>
+  <div class="imagen my-4">
+    <img [src]="imageService.url" width="200px" alt="">
+  </div>
+  <button class="btn btn-primary" [disabled]="f.invalid">Agregar</button>
+</form> -->
