--- a/portfolio/src/app/componentes/acercade/acercade.component.html
+++ b/portfolio/src/app/componentes/acercade/acercade.component.html
@@ -19,12 +19,12 @@
         routerLink="/editacercade/1">
         <i class="bi bi-pencil-fill"></i> Editar persona</button>
       </div>
-      <div class="col-6 col-md-4 col-lg-2 text-center">
+      <!-- <div class="col-6 col-md-4 col-lg-2 text-center">
         <button type="button" class="btn btn-outline-primary btn-lg p-3"
         (click)="delete(persona.id)" >
         <i class="bi bi-trash3"></i>Borrar
       </button>
-      </div>
+      </div> -->
 
     </div>
 
@@ -34,7 +34,8 @@
     </div>
 
     <div class="col-12 col-md-6 m-3 align-self-center">
-      <h2 class="display-5 mb-4">Arte y Diseño Multimedial - Desarrollo Full Stack jr</h2>
+      <h2 class="display-5 mb-4">Diseño Multimedial - Desarrollo Full Stack jr</h2>
+
       <p class="h4 fw-normal mt-4 mx-2">{{persona.descripcion}}</p>
       <p></p>
     </div>
