--- a/portfolio/src/app/componentes/experiencia/experiencia.component.html
+++ b/portfolio/src/app/componentes/experiencia/experiencia.component.html
@@ -64,7 +64,7 @@
     </div>
   </div>
 
-  <div class="row g-0 my-4 align-items-center">
+  <!-- <div class="row g-0 my-4 align-items-center">
     <div class="col-2 col-md-4 text-center my-5">
       <img class="w-25" src="assets/experiencia/logoempresa.jpg" alt="">
     </div>
@@ -86,7 +86,7 @@
       <p class="h4 fw-normal">Creación de sitio web en WordPress para el colegio Escuela
         Ernesto Perez Cuesta 4-155. Prácticas Profesionales</p>
     </div>
-  </div>
+  </div> -->
 
 
 
