--- a/portfolio/src/app/componentes/login/login.component.html
+++ b/portfolio/src/app/componentes/login/login.component.html
@@ -24,9 +24,10 @@
       <div class="col-lg-6 col-12 mx-auto my-5">
         <div class="text-center image-size-small position-relative my-3">
         <img src="assets/chibiCortada.png" class="rounded-circle p-2 bg-white">
-        <div class="icon-camera">
+        <!-- <div class="icon-camera"> acá abajo -->
+        <!-- <div class="icon-camera">
         <a href="" class="text-primary"><i class="lni lni-camera"></i></a>
-        </div>
+        </div> -->
         </div>
         <div class="p-5 bg-white rounded shadow-lg">
           <h3 class="mb-2 text-center pt-5">Login</h3>
@@ -43,16 +44,16 @@
             <input name="password" id="password" class="form-control form-control-lg"
                    type="password" [(ngModel)]="password" required>
 
-            <p class="m-0 py-4"><a href="" class="text-muted">¿Olvidaste la contraseña?</a></p>
+            <!-- <p class="m-0 py-4"><a href="" class="text-muted">¿Olvidaste la contraseña?</a></p> -->
 
-            <button class="btn btn-primary btn-lg w-100 shadow-lg">Login</button>
+            <button class="btn btn-primary btn-lg w-100 shadow-lg my-5">Login</button>
           </form>
 
 
 
-         <div class="text-center pt-4">
+         <!-- <div class="text-center pt-4">
           <p class="m-0">¿No tienes una cuenta? <a href="" class="text-dark font-weight-bold">Registrarse</a></p>
-        </div>
+        </div> -->
         </div>
       </div>
     </div>
