--- a/portfolio/src/app/home/home.component.html
+++ b/portfolio/src/app/home/home.component.html
@@ -4,6 +4,7 @@
 <app-experiencia></app-experiencia>
 <app-educacion></app-educacion>
 <app-hys></app-hys>
+<app-proyecto></app-proyecto>
 
 
 <div class="container-fluid">
