commit proyecto final

--- a/portfolio/src/app/componentes/experiencia/experiencia.component.html
+++ b/portfolio/src/app/componentes/experiencia/experiencia.component.html
@@ -49,7 +49,7 @@
     </div>
     <div  class="col-6 col-md-5 mx-4">
       <h2 class="display-5 mb-4">{{Experiencia.nombreE}}</h2>
-      <p class="h4 fw-light">(years)</p>
+      <!-- <p class="h4 fw-light">(years)</p> -->
       <p class="h4 fw-normal">{{Experiencia.descripcionE}}</p>
     </div>
     <div *ngIf="isLogged" class="col-3 col-md-2 ">
@@ -64,29 +64,37 @@
     </div>
   </div>
 
-  <!-- <div class="row g-0 my-4 align-items-center">
+  <div class="row g-0 my-5 align-items-center">
     <div class="col-2 col-md-4 text-center my-5">
-      <img class="w-25" src="assets/experiencia/logoempresa.jpg" alt="">
+      <img class="w-25" src="assets/exp/e01.jpg" alt="">
     </div>
     <div class="col-8 col-md-6">
-      <h2 class="display-5 mb-4">Diseño y Desarrollo Web</h2>
-      <p class="h4 fw-light">Periodo Sep.17-Dic.17 2018</p>
-      <p class="h4 fw-normal">Creación de sitio web en WordPress para el colegio Escuela
-        Ernesto Perez Cuesta 4-155. Prácticas Profesionales</p>
+      <h2 class="display-5 mb-4">Diseñadora Freelance</h2>
+      <!-- <p class="h4 fw-light">Periodo Sep.17-Dic.17 2018</p> -->
+      <p class="h4 fw-normal">Soy una diseñadora freelance con habilidades en la creación de logos
+        y tarjetas, así como en el diseño de UX/UI. También me dedico a la producción audiovisual,
+        edición de videos para eventos y fotografía. Mi objetivo es ofrecer un servicio integral a
+        mis clientes, desde la concepción de la idea hasta la ejecución final del proyecto, mediante
+        una comunicación y colaboración constante.
+      </p>
     </div>
   </div>
 
-  <div class="row g-0 my-4 align-items-center">
+  <div class="row g-0 my-5 align-items-center">
     <div class="col-2 col-md-4 text-center my-5">
-      <img class="w-25" src="assets/experiencia/logoempresa.jpg" alt="">
+      <img class="w-25" src="assets/exp/e02.jpg" alt="">
     </div>
     <div class="col-8 col-md-6">
-      <h2 class="display-5 mb-4">Desarrollo de Portfolio</h2>
-      <p class="h4 fw-light">Periodo Sep17-Dic17 2018</p>
-      <p class="h4 fw-normal">Creación de sitio web en WordPress para el colegio Escuela
-        Ernesto Perez Cuesta 4-155. Prácticas Profesionales</p>
+      <h2 class="display-5 mb-4">Escuela Nº 4-155 Ernesto Pérez Cuesta</h2>
+      <!-- <p class="h4 fw-light">Periodo Sep17-Dic17 2018</p> -->
+      <p class="h4 fw-normal">Creación de Sitio Web con WordPress.
+        Este sitio web fue creado utilizando WordPress como plataforma de gestión de contenido.
+        Me encargué de todo el proceso de diseño y desarrollo, desde la planificación inicial
+        hasta la implementación final. El sitio incluye páginas de inicio, contacto y sobre nosotros,
+        así como una sección de oferta educativa. Además, incorporé el logo y algunas fotografías
+        para mejorar la imagen general del sitio.</p>
     </div>
-  </div> -->
+  </div>
 
 
 
