--- a/portfolio/src/app/componentes/hys/hys.component.html
+++ b/portfolio/src/app/componentes/hys/hys.component.html
@@ -26,7 +26,7 @@
         [outerStrokeWidth]="16"
         [innerStrokeWidth]="8"
         [outerStrokeColor]="'#009ac0'"
-        [innerStrokeColor]="'#91d3e3'"
+        [innerStrokeColor]="'#90d0f5'"
         [animation]="true"
         [animationDuration]="300"
       ></circle-progress>
