--- a/portfolio/src/app/componentes/acercade/edit-acercade.component.html
+++ b/portfolio/src/app/componentes/acercade/edit-acercade.component.html
@@ -21,23 +21,23 @@
       <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
         <div class="form-group my-4">
           <label for="nombre" class="h4 fw-normal">Nombre</label>
-          <input type="text" class="form-control" id="nombre" name="nombre" [(ngModel)]="persona.nombre" required>
+          <input type="text" value="" class="form-control" id="nombre" name="nombre" [(ngModel)]="persona.nombre" required>
         </div>
         <div class="form-group my-4">
           <label for="apellido" class="h4 fw-normal">Apellido</label>
-          <input type="text" class="form-control" id="apellido" name="apellido" [(ngModel)]="persona.apellido" required>
+          <input type="text" value="" class="form-control" id="apellido" name="apellido" [(ngModel)]="persona.apellido" required>
         </div>
         <div class="form-group my-4">
           <label for="descripcion" class="h4 fw-normal">Descripcion</label>
-          <input type="text" class="form-control" id="descripcion" name="descripcion" [(ngModel)]="persona.descripcion" required>
+          <input type="text" value="" class="form-control" id="descripcion" name="descripcion" [(ngModel)]="persona.descripcion" required>
         </div>
         <div class="form-group my-4">
           <label for="img" class="h4 fw-normal">Imágen</label>
-          <input type="file" class="form-control" id="img" name="img" [(ngModel)]="persona.img" (change)="uploadImage($event)"
+          <input type="file" value="" class="form-control" id="img" name="img" [(ngModel)]="persona.img" (change)="uploadImage($event)"
           accept=".jpg, .jpeg, .png">
         </div>
         <div class="imagen my-4">
-          <img [src]="imageService.url" width="200px" alt="">
+          <img [src]="imageService.url" width="200px">
         </div>
 
         <button class="btn btn-primary">Editar</button>
