--- a/portfolio/src/app/componentes/educacion/educacion.component.html
+++ b/portfolio/src/app/componentes/educacion/educacion.component.html
@@ -65,29 +65,53 @@
     </div>
   </div>
 
-  <!-- <div class="row g-0 my-4 align-items-center">
+  <div class="row g-0 my-4 align-items-center">
     <div class="col-2 col-md-4 text-center my-5">
-      <img class="w-25" src="assets/experiencia/logoempresa.jpg" alt="">
+      <img class="w-25" src="assets/edu/ed01.png" alt="">
     </div>
     <div class="col-8 col-md-6">
-      <h2 class="display-5 mb-4">Diseño y Desarrollo Web</h2>
-      <p class="h4 fw-light">Periodo Sep.17-Dic.17 2018</p>
-      <p class="h4 fw-normal">Creación de sitio web en WordPress para el colegio Escuela
-        Ernesto Perez Cuesta 4-155. Prácticas Profesionales</p>
+      <h2 class="display-5 mb-4">FUniversitas</h2>
+      <!-- <p class="h4 fw-light">Periodo Sep.17-Dic.17 2018</p> -->
+      <p class="h4 fw-normal">Me recibí en la carrera Arte y Diseño Multimedial orientado al
+        diseño y desarrollo web.
+      </p>
     </div>
   </div>
 
   <div class="row g-0 my-4 align-items-center">
     <div class="col-2 col-md-4 text-center my-5">
-      <img class="w-25" src="assets/experiencia/logoempresa.jpg" alt="">
+      <img class="w-25" src="assets/edu/ed02.png" alt="">
     </div>
     <div class="col-8 col-md-6">
-      <h2 class="display-5 mb-4">Desarrollo de Portfolio</h2>
-      <p class="h4 fw-light">Periodo Sep17-Dic17 2018</p>
-      <p class="h4 fw-normal">Creación de sitio web en WordPress para el colegio Escuela
-        Ernesto Perez Cuesta 4-155. Prácticas Profesionales</p>
+      <h2 class="display-5 mb-4">Codo a Codo</h2>
+      <!-- <p class="h4 fw-light">Periodo Sep17-Dic17 2018</p> -->
+      <p class="h4 fw-normal">Realicé un curso de desarrollo full stack jr.</p>
     </div>
-  </div> -->
+  </div>
+
+  <div class="row g-0 my-4 align-items-center">
+    <div class="col-2 col-md-4 text-center my-5">
+      <img class="w-25" src="assets/edu/ed03.jpg" alt="">
+    </div>
+    <div class="col-8 col-md-6">
+      <h2 class="display-5 mb-4">Argentia Programa</h2>
+      <!-- <p class="h4 fw-light">Periodo Sep17-Dic17 2018</p> -->
+      <p class="h4 fw-normal">Cursé la primera etapa #SeProgramar y la segunda etapa #YoProgramo
+        para capacitarme en lenguajes y conocimientos sobre programación, testing y habilidades digitales.
+      </p>
+    </div>
+  </div>
+
+  <div class="row g-0 my-4 align-items-center">
+    <div class="col-2 col-md-4 text-center my-5">
+      <img class="w-25" src="assets/edu/ed04.png" alt="">
+    </div>
+    <div class="col-8 col-md-6">
+      <h2 class="display-5 mb-4">MIRÍADAX</h2>
+      <!-- <p class="h4 fw-light">Periodo Sep17-Dic17 2018</p> -->
+      <p class="h4 fw-normal">Realicé un curso de Introducción al diseño de videojuegos 9ªEdición</p>
+    </div>
+  </div>
 
 
 
